Support JDK 11
JDK 11 removed the Java EE and CORBA Modules and since, LT depended on
javax.xml.bind(JAXB) module which was removed in JDK 11, this work-around
is introduced which adds the dependency via Maven.

Additionally, deprecated warning of "UseConcMarkSweepGC" is thrown by
JDK11 and hence, new "UseG1GC" is used.

Signed-off-by: Pratik Karki <predatoramigo@gmail.com>